doc: use Prettier for all .md documents
You need to use `<!-- prettier-ignore-start -->`/`<!--
prettier-ignore-end -->` explicitly when you use add a reference to a
section explicitly. For example:

    <!-- prettier-ignore-start -->
    (release-14-0-9)=
    ## Release 14.0.9 - 2024-09-27
    <!-- prettier-ignore-end -->

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,18 +1,22 @@
 # News - 14 series
 
+<!-- prettier-ignore-start -->
 (release-14-0-9)=
 ## Release 14.0.9 - 2024-09-27
+<!-- prettier-ignore-end -->
 
 ### Fixes
 
-* Fixed build error when we build from source on Alpine Linux 3.20.
+- Fixed build error when we build from source on Alpine Linux 3.20.
 
+<!-- prettier-ignore-start -->
 (release-14-0-8)=
 ## Release 14.0.8 - 2024-09-25
+<!-- prettier-ignore-end -->
 
 ### Improvements
 
-* [Amazon Linux 2023] Added support for Amazon Linux 2023. [GH-1845][Reported by takoyaki-nyokki and Watson]
+- [Amazon Linux 2023] Added support for Amazon Linux 2023. [GH-1845][Reported by takoyaki-nyokki and Watson]
 
   However, we don't support Amazon Linux 2023 for aarch64 currently.
   Because the maintenance is costly because of the time of building a package for aarch64 is too time consuming.
@@ -22,19 +26,21 @@
 
 ### Fixes
 
-* Fixed a crash bug when we specified `pgroonga.log_type` on PGroonga for Windows.
+- Fixed a crash bug when we specified `pgroonga.log_type` on PGroonga for Windows.
 
 ### Thanks
 
-* takoyaki-nyokki
-* Watson
+- takoyaki-nyokki
+- Watson
 
+<!-- prettier-ignore-start -->
 (release-14-0-7)=
 ## Release 14.0.7 - 2024-09-03
+<!-- prettier-ignore-end -->
 
 ### Improvements
 
-* [NormalizerNFKC] Added a new option `unify_latin_alphabet_with`.[pgroonga/pgroonga#418][Reported by Man Hoang]
+- [NormalizerNFKC] Added a new option `unify_latin_alphabet_with`.[pgroonga/pgroonga#418][Reported by Man Hoang]
 
   This option enables that alphabets with diacritical mark and alphabets without diacritical mark regarded as the same character as below.
 
@@ -109,53 +115,55 @@
   We will fix the bug from NormalizerNFKC160.
   ```
 
-* Added support for [simdjson](https://simdjson.org/).
+- Added support for [simdjson](https://simdjson.org/).
 
   Currently, we keeps RapidJSON support but we'll remove RapidJSON support later.
 
-* [{doc}`/install/ubuntu`] Dropped support for Ubuntu 23.10 (Mantic Minotaur)
+- [{doc}`/install/ubuntu`] Dropped support for Ubuntu 23.10 (Mantic Minotaur)
 
   Because Ubuntu 23.10 reached EOL at July 11, 2024.
 
-* Distributed the install packages which enabled `libedit`.
+- Distributed the install packages which enabled `libedit`.
 
   Now in Groonga REPL, we can refer to the command history using the up arrow key.
 
 ### Fixes
 
-* [status] Fixed a bug that "h3" is never shown in `groonga --version`/`status`.
+- [status] Fixed a bug that "h3" is never shown in `groonga --version`/`status`.
 
-* Fixed a crash bug when log rotate is enabled.
+- Fixed a crash bug when log rotate is enabled.
 
   This bug occurred in the following conditions.
 
   1. When logging to a file by specification the following options.
 
-    * `--log-path <path>`
-    * `--query-log-path <path>`
+     - `--log-path <path>`
+     - `--query-log-path <path>`
 
   2. When log rotate is enabled by specification the following options.
 
-    * `--log-rotate-threshold-size <threshold>`
-    * `--query-log-rotate-threshold-size <threshold>`
+     - `--log-rotate-threshold-size <threshold>`
+     - `--query-log-rotate-threshold-size <threshold>`
 
   3. When process ID log output is enabled by specification the following options.
 
-    * `--log-flags process_id`
+     - `--log-flags process_id`
 
-* Fixed a bug that Groonga use bundled Onigmo even if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
+- Fixed a bug that Groonga use bundled Onigmo even if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
 
 ### Thanks
 
-  * Man Hoang
-  * Biswapriyo Nath
+- Man Hoang
+- Biswapriyo Nath
 
+<!-- prettier-ignore-start -->
 (release-14-0-6)=
 ## Release 14.0.6 - 2024-07-29
+<!-- prettier-ignore-end -->
 
 ### Improvements
 
-* Added support for prefix search without index against vector column.
+- Added support for prefix search without index against vector column.
 
   We can already prefix search with index against vector column.
   However, we can't prefix search without index against vector column until now.
@@ -215,18 +223,20 @@
   ]
   ```
 
-* [{doc}`/install/debian`] Dropped support for Debian 11 (bullseye).
+- [{doc}`/install/debian`] Dropped support for Debian 11 (bullseye).
 
+<!-- prettier-ignore-start -->
 (release-14-0-5)=
 ## Release 14.0.5 - 2024-07-04
+<!-- prettier-ignore-end -->
 
 ### Improvements
 
-* Dropped support for CentOS 7.
+- Dropped support for CentOS 7.
 
   Because CentOS 7 reached EOL.
 
-* Added a new feature that objects(table or column) as remove as possible.
+- Added a new feature that objects(table or column) as remove as possible.
 
   The crash safe feature of PGroonga will use this feature mainly.
 
@@ -236,7 +246,7 @@
 
 ### Fixes
 
-* [{doc}`/reference/functions/query`] Fixed a bug that the order of evaluation of `'A || query("...", "B C")'` is wrong
+- [{doc}`/reference/functions/query`] Fixed a bug that the order of evaluation of `'A || query("...", "B C")'` is wrong
 
   We expect that `{"name": "Alice", "memo": "Groonga user"}` is hit in the following example.
   However, if this problem occurred, the following query had not been hit.
@@ -300,13 +310,13 @@
 
   Here is occurrence condition of this problem.
 
-    * We use `OR` search and `query()`.
-    * We use `AND` search in `query()`.
-    * The order of condition expression is `'A || query("...", "B C")'`.
+  - We use `OR` search and `query()`.
+  - We use `AND` search in `query()`.
+  - The order of condition expression is `'A || query("...", "B C")'`.
 
   So, this problem doesn't occur if we use only `query()` or we don't use `AND` search in `query()`.
 
-* [{doc}`/reference/commands/select`] Fixed a bug that a condition that evaluate prefix search in advance such as `--query "A* OR B"` returned wrong search result
+- [{doc}`/reference/commands/select`] Fixed a bug that a condition that evaluate prefix search in advance such as `--query "A* OR B"` returned wrong search result
 
   This problem may occur when prefix search evaluate in advance.
   This problem doesn't occur a condition that evaluate prefix search in the end such as `--query A OR B*`.
@@ -353,17 +363,19 @@
   ]
   ```
 
+<!-- prettier-ignore-start -->
 (release-14-0-4)=
 ## Release 14.0.4 - 2024-05-29
+<!-- prettier-ignore-end -->
 
 ### Fixes
 
-* [{doc}`/reference/functions/query_parallel_or`] Fixed a bug that the {ref}`select-match-escalation-threshold` or `force_match_escalation` options were ignored when using `query_parallel_or()`.
+- [{doc}`/reference/functions/query_parallel_or`] Fixed a bug that the {ref}`select-match-escalation-threshold` or `force_match_escalation` options were ignored when using `query_parallel_or()`.
 
   Before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated when we use `query_parallel_or()`.
   This problem occurred only `query_parallel_or()`. {doc}`/reference/functions/query` don't occur this problem.
 
-  Generally, we don't disable match escalation. Because we want to get something search results. The number of hits is 0 is the unwelcome result of us. 
+  Generally, we don't disable match escalation. Because we want to get something search results. The number of hits is 0 is the unwelcome result of us.
   Therefore, this problem has no effect by many users. However, it has effect by user who use stop word as below.
 
   ```
@@ -404,7 +416,7 @@
   However, If this problem occur, Groonga returns match record.
   Because if we use `query_parallel_or()`, `match_escalation_threshold` doesn't work.
 
-* Fixed a bug that full-text search againt a reference column of a vector didn't work.
+- Fixed a bug that full-text search againt a reference column of a vector didn't work.
 
   This problem has occured Groonga v14.0.0 or later.
   This problem has effect if we execute full-text search against a reference column of a vector.
@@ -461,22 +473,24 @@
   ]
   ```
 
+<!-- prettier-ignore-start -->
 (release-14-0-3)=
 ## Release 14.0.3 - 2024-05-09
+<!-- prettier-ignore-end -->
 
 ### Improvements
 
-* We optimized performance as below.
+- We optimized performance as below.
 
-  * We optimized performance of `OR` and `AND` search when the number of hits were many.
+  - We optimized performance of `OR` and `AND` search when the number of hits were many.
 
-  * We optimized performance of prefix search(`@^`).
+  - We optimized performance of prefix search(`@^`).
 
-  * We optimized performance of `AND` search when the number of records of `A` more than `B` in condition of `A AND B`.
+  - We optimized performance of `AND` search when the number of records of `A` more than `B` in condition of `A AND B`.
 
-  * We optimized performance of search when we used many dynamic columns.
+  - We optimized performance of search when we used many dynamic columns.
 
-* [{doc}`/reference/tokenizers/token_ngram`] Added new option `ignore_blank`.
+- [{doc}`/reference/tokenizers/token_ngram`] Added new option `ignore_blank`.
 
   We can replace `TokenBigramIgnoreBlank` with `TokenNgram("ignore_blank", true)` as below.
 
@@ -555,13 +569,13 @@
   ]
   ```
 
-* [{doc}`/install/ubuntu`] Add support for Ubuntu 24.04 LTS (Noble Numbat).
+- [{doc}`/install/ubuntu`] Add support for Ubuntu 24.04 LTS (Noble Numbat).
 
 ### Fixes
 
-* [{doc}`/reference/commands/request_cancel`] Fix a bug that Groonga may crash when we execute `request_cancel` command while we execute the other query.
+- [{doc}`/reference/commands/request_cancel`] Fix a bug that Groonga may crash when we execute `request_cancel` command while we execute the other query.
 
-* Fixed the unexpected error when using `--post_filter` with `--offset` greater than the post-filtered result
+- Fixed the unexpected error when using `--post_filter` with `--offset` greater than the post-filtered result
 
   In the same situation, using `--filter` with `--offset` doesn't raise the error.
   This inconsistency in behavior between `--filter` and `--post-filter` has now been resolved.
@@ -600,7 +614,7 @@
   ]
   ```
 
-* Fixed a bug where incorrect search result could be returned when not all phrases within `(...)` matched using near phrase product.
+- Fixed a bug where incorrect search result could be returned when not all phrases within `(...)` matched using near phrase product.
 
   For example, there is no record which matched `(2)` condition using `--query '*NPP1"(a) (2)"'`.
   In this case, the expected behavior would be return no record. However, the actual behavior was equal to the query `--query '*NPP and "(a)"` as below.
@@ -650,11 +664,11 @@
   ]
   ```
 
-* Fixed a bug that rehash failed or data in a table broke when rehash occurred that the table with `TABLE_HASH_KEY` has  2^28 or more records.
+- Fixed a bug that rehash failed or data in a table broke when rehash occurred that the table with `TABLE_HASH_KEY` has 2^28 or more records.
 
-* Fixed a bug that highlight position slipped out of place in the following cases.
+- Fixed a bug that highlight position slipped out of place in the following cases.
 
-  * If full width space existed before highlight target characters as below.
+  - If full width space existed before highlight target characters as below.
 
     We expected that Groonga returned `"Groonga　<span class=\"keyword\">高</span>速！"`.
     However, Groonga returned `"Groonga　<span class=\"keyword\">高速</span>！"` as below.
@@ -702,7 +716,7 @@
     ]
     ```
 
-  * If we used `TokenNgram("loose_blank", true)` and if highlight target characters included full width space as below.
+  - If we used `TokenNgram("loose_blank", true)` and if highlight target characters included full width space as below.
 
     We expected that Groonga returned `"<span class=\"keyword\">山田 太郎</span>"`.
     However, Groonga returned `"<span class=\"keyword\">山田 太</span>"` as below.
@@ -749,7 +763,7 @@
     ]
     ```
 
-  * If white space existed in the front of highlight target characters as below.
+  - If white space existed in the front of highlight target characters as below.
 
     We expected that Groonga returned `" <span class=\"keyword\">山</span>田太郎"`.
     However, Groonga returned `" <span class=\"keyword\">山</span>"` as below.
@@ -798,7 +812,7 @@
     ]
     ```
 
-  * If the second character of highlight target was full width space as below.
+  - If the second character of highlight target was full width space as below.
 
     We expected that Groonga returned `"<span class=\"keyword\">山　田</span>太郎"`.
     However, Groonga returned `"<span class=\"keyword\">山　田太</span>郎"` as below.
@@ -844,12 +858,14 @@
     ]
     ```
 
+<!-- prettier-ignore-start -->
 (release-14-0-2)=
 ## Release 14.0.2 - 2024-03-29
+<!-- prettier-ignore-end -->
 
 ### Improvements
 
-* Reduced a log level of a log when Groonga setting normalizers/tokenizer/token_filters against temporary table.
+- Reduced a log level of a log when Groonga setting normalizers/tokenizer/token_filters against temporary table.
 
   For example, the target log of this modification is the following log.
 
@@ -863,12 +879,14 @@
   Therefore, we reduce log level to `debug` for the log since this release.
   Thus, this log does not output when PGroonga start in default.
 
+<!-- prettier-ignore-start -->
 (release-14-0-1)=
 ## Release 14.0.1 - 2024-03-14
+<!-- prettier-ignore-end -->
 
 ### Improvements
 
-* [{doc}`/reference/commands/load`] Stopped reporting an error when we `load` key that becomes an empty key by normalization.
+- [{doc}`/reference/commands/load`] Stopped reporting an error when we `load` key that becomes an empty key by normalization.
 
   `"-"` becomes `""` with `NormalizerNFKC150("remove_symbol", true)`. So the following case reports a "empty key" error.
 
@@ -891,15 +909,15 @@
 
 ### Fixes
 
-* Fixed a crash bug if a request is canceled {doc}`/reference/functions/between` or range search.
+- Fixed a crash bug if a request is canceled {doc}`/reference/functions/between` or range search.
 
   This bug doesn't necessarily occur. This bug occur when we cancel a request in the specific timing.
   This bug occur easily when search time is long such as sequential search.
 
-* Fixed a bug that {doc}`/reference/functions/highlight_html` may return invalid result when the following conditions are met.
+- Fixed a bug that {doc}`/reference/functions/highlight_html` may return invalid result when the following conditions are met.
 
-  * We use multiple normalizers such as `NormalizerTable` and `NormalizerNFKC150`.
-  * We highlight string include whitespace.
+  - We use multiple normalizers such as `NormalizerTable` and `NormalizerNFKC150`.
+  - We highlight string include whitespace.
 
   For example, this bug occur such as the following case.
 
@@ -957,40 +975,42 @@
   ]
   ```
 
-* [{doc}`/install/ubuntu`] We become able to provide package for Ubuntu again.
+- [{doc}`/install/ubuntu`] We become able to provide package for Ubuntu again.
 
   We don't provide packages for Ubuntu in Groonga version 14.0.0.
   Because we fail makeing Groonga package for Ubuntu by problrm of build environment for Ubuntu package.
 
   We fixed problrm of build environment for Ubuntu package in 14.0.1. So, we can provide packages for Ubuntu again since this release.
 
-* Fixed build error when we build from source by using [`clang`](https://clang.llvm.org/). [GitHub#1738][Reported by windymelt]
+- Fixed build error when we build from source by using [`clang`](https://clang.llvm.org/). [GitHub#1738][Reported by windymelt]
 
 ### Thanks
 
-* windymelt
+- windymelt
 
+<!-- prettier-ignore-start -->
 (release-14-0-0)=
 ## Release 14.0.0 - 2024-02-29
+<!-- prettier-ignore-end -->
 
 This is a major version up!
 But It keeps backward compatibility. We can upgrade to 14.0.0 without rebuilding database.
 
 ### Improvements
 
-* Added a new tokenizer `TokenH3Index` (experimental).
+- Added a new tokenizer `TokenH3Index` (experimental).
 
   `TokenH3Index`tokenizes WGS84GetPoint to UInt64(H3 index).
 
-* Added support for offline and online index construction with non text based tokenizer (experimental).
+- Added support for offline and online index construction with non text based tokenizer (experimental).
 
   `TokenH3Index` is one of non text based tokenizers.
 
-* [{doc}`/reference/commands/select`] Added support for searching by index with non text based tokenizer (experimental).
+- [{doc}`/reference/commands/select`] Added support for searching by index with non text based tokenizer (experimental).
 
   `TokenH3Index` is one of non text based tokenizers.
 
-* Added new functions `distance_cosine()`, `distance_inner_product()`, `distance_l2_norm_squared()`, `distance_l1_norm()`.
+- Added new functions `distance_cosine()`, `distance_inner_product()`, `distance_l2_norm_squared()`, `distance_l1_norm()`.
 
   We can only get records that a small distance as vector with these functions and `limit N`
 
@@ -998,37 +1018,37 @@ But It keeps backward compatibility. We can upgrade to 14.0.0 without rebuilding
 
   However, we don't optimaize these functions yet.
 
-  * `distance_cosine()`: Calculate cosine similarity.
-  * `distance_inner_product()`: Calculate inner product.
-  * `distance_l2_norm_squared()`: Calculate euclidean distance.
-  * `distance_l1_norm()`: Calculate manhattan distance.
+  - `distance_cosine()`: Calculate cosine similarity.
+  - `distance_inner_product()`: Calculate inner product.
+  - `distance_l2_norm_squared()`: Calculate euclidean distance.
+  - `distance_l1_norm()`: Calculate manhattan distance.
 
-* Added a new function `number_round()`.
+- Added a new function `number_round()`.
 
-* [{doc}`/reference/commands/load`] Added support for parallel `load`.
+- [{doc}`/reference/commands/load`] Added support for parallel `load`.
 
   This feature only enable when the `input_type` of `load` is `apache-arrow`.
 
   This feature one thread per column. If there are many target columns, it will reduce load time.
 
-* [{doc}`/reference/commands/select`] We can use uvector as much as possible for array literal in `--filter`.
+- [{doc}`/reference/commands/select`] We can use uvector as much as possible for array literal in `--filter`.
 
   uvector is vector of elements with fix size.
 
   If all elements have the same type, we use uvector instead vector.
 
-* [{doc}`/reference/commands/status`] Added `n_workers` to output of `status`.
+- [{doc}`/reference/commands/status`] Added `n_workers` to output of `status`.
 
-* Optimized a dynamic column creation.
+- Optimized a dynamic column creation.
 
-* [WAL] Added support for rebuilding broken indexes in parallel.
+- [WAL] Added support for rebuilding broken indexes in parallel.
 
-* [{doc}`/reference/commands/select`] Added support for `Int64` in `output_type=apache-arrow` for columns that reference other table.
+- [{doc}`/reference/commands/select`] Added support for `Int64` in `output_type=apache-arrow` for columns that reference other table.
 
 ### Fixes
 
-* [Windows] Fixed path for documents of `groonga-normalizer-mysql` in package for Windows.
+- [Windows] Fixed path for documents of `groonga-normalizer-mysql` in package for Windows.
 
   Documents of `groonga-normalizer-mysql` put under the `share/` in this release.
 
-* [{doc}`/reference/commands/select`] Fixed a bug that Groonga may crash when we use bitwise operations.
+- [{doc}`/reference/commands/select`] Fixed a bug that Groonga may crash when we use bitwise operations.
