--- a/doc/locale/ja/LC_MESSAGES/reference/commands/object_list.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/commands/object_list.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.2.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2024-10-21 11:48+0900\n"
+"PO-Revision-Date: 2024-10-28 15:00+0900\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -300,8 +300,8 @@ msgstr "``\"column:fix\"`` と ``\"column:var\"`` というオブジェクトの
 msgid "The generator expression in :doc:`../grn_expr/script_syntax`."
 msgstr ":doc:`../grn_expr/script_syntax` の生成式です。"
 
-msgid "If the column is not a :ref:`generated column<column-create-generated-column>`, this is an empty string."
-msgstr ":ref:`自動生成カラム<column-create-generated-column>` ではない場合は空文字列になります。"
+msgid "If the column is not a :ref:`generated-column`, this is an empty string."
+msgstr ":ref:`generated-column` ではない場合は空文字列になります。"
 
 msgid "``SOURCES``"
 msgstr ""
