--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,9 +7,8 @@
 
 ### Improvements
 
-* [status] `status`の結果に`llama.cpp`を追加しました。
+###### [status] `status`の結果に`llama.cpp`を追加しました。
 
-* 新しい関数 `language_model_vectorize()` を追加しました。(実験的)
 
 * [column_create] 新しい引数 `--generator` を追加しました。
 
@@ -19,11 +18,14 @@
 
   1. わざわざユーザーがテキスト生成処理を管理する必要がありません。
   2. 生成元のカラムさえあれば良いので、`load`するデータ量を減らすことができます。
+**新しい関数 `language_model_vectorize()` を追加しました。(実験的)**
+###### 新しい関数 `language_model_vectorize()` を追加しました。(実験的)
 
+**[column_create] 新しい引数 `--generator` を追加しました。**
+###### [column_create] 新しい引数 `--generator` を追加しました。
 ### Fixes
 
-* [{doc}`/server/gqtp`] GQPTクライアントに返却する`INVALID_ARGUMENT`の`RC`の値が`-22
-`ではなく、`65514`になっていた問題を修正しました。
+###### [{doc}`/server/gqtp`] GQPTクライアントに返却する`INVALID_ARGUMENT`の`RC`の値が`-22`ではなく、`65514`になっていた問題を修正しました。
 
 <!-- prettier-ignore-start -->
 (release-14-0-9)=
