--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -9,20 +9,45 @@
 
 ###### [status] `status`の結果に`llama.cpp`を追加しました。
 
+以下のように、`status`の結果の`features`に新しく`llama.cpp`の有効/無効を表示するようになっています。
+(`status`の表示は長いので説明に必要な部分のみ抜粋しています。)
 
-* [column_create] 新しい引数 `--generator` を追加しました。
+```
+status
+[
+  [
+    0,
+    0,
+    0.0
+  ],
+  {
+    (省略)
+    "features": {
+      (省略)
+      "llama.cpp": true,
+      (省略)
+    },
+    (省略)
+  }
+]
+```
 
-  カラムを自動生成できます。
-  以下のように他のカラムの値からカラムの値を自動で生成できます。
-  この機能のメリットは以下の2点です。
+`llama.cpp`は次に紹介する`language_model_vectorize()`に使用しています。
 
-  1. わざわざユーザーがテキスト生成処理を管理する必要がありません。
-  2. 生成元のカラムさえあれば良いので、`load`するデータ量を減らすことができます。
-**新しい関数 `language_model_vectorize()` を追加しました。(実験的)**
 ###### 新しい関数 `language_model_vectorize()` を追加しました。(実験的)
 
-**[column_create] 新しい引数 `--generator` を追加しました。**
+検索対象のドキュメントをベクトルに変換できます。
+TODO
+
 ###### [column_create] 新しい引数 `--generator` を追加しました。
+
+カラムを自動生成できます。
+以下のように他のカラムの値からカラムの値を自動で生成できます。
+この機能のメリットは以下の2点です。
+
+1. わざわざユーザーがテキスト生成処理を管理する必要がありません。
+2. 生成元のカラムさえあれば良いので、`load`するデータ量を減らすことができます。
+
 ### Fixes
 
 ###### [{doc}`/server/gqtp`] GQPTクライアントに返却する`INVALID_ARGUMENT`の`RC`の値が`-22`ではなく、`65514`になっていた問題を修正しました。
