Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,10 +7,10 @@
 
 ### Improvements
 
-###### [status] `status`の結果に`llama.cpp`を追加しました。
+###### [status] Added `llama.cpp` to the `status` results.
 
-以下のように、`status`の結果の`features`に新しく`llama.cpp`の有効/無効を表示するようになっています。
-(`status`の表示は長いので説明に必要な部分のみ抜粋しています。)
+The status results display whether `llama.cpp` is enabled or disabled under the `features` section, as follows.
+(Only the relevant parts are extracted for explanation due to the lengthy status output.)
 
 ```
 status
