--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -32,7 +32,7 @@ status
 ]
 ```
 
-`llama.cpp`は次に紹介する`language_model_vectorize()`に使用しています。
+The `llama.cpp` feature is used in the newly introduced `language_model_vectorize()` function described next.
 
 ###### 新しい関数 `language_model_vectorize()` を追加しました。(実験的)
 
