Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -36,8 +36,8 @@ The `llama.cpp` feature is used in the newly introduced `language_model_vectoriz
 
 ###### 新しい関数 `language_model_vectorize()` を追加しました。(実験的)
 
-まだ実験的な機能なので安定していません。
-また、この機能はCPUとメモリーを多く使います。
+This feature is still experimental and unstable.
+It also consumes a significant amount of CPU and memory.
 
 この関数は、与えられたテキストの正規化されたエンべディング（ベクトル表現）を返します。
 エンべディングとは、与えられたテキストの意味情報をベクトルとして表現することです。
