Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -39,9 +39,9 @@ The `llama.cpp` feature is used in the newly introduced `language_model_vectoriz
 This feature is still experimental and unstable.
 It also consumes a significant amount of CPU and memory.
 
-この関数は、与えられたテキストの正規化されたエンべディング（ベクトル表現）を返します。
-エンべディングとは、与えられたテキストの意味情報をベクトルとして表現することです。
-意味をベクトルとして表現できることで、字面ではなく意味ベースの検索ができるようになります。
+The function returns normalized embeddings (vector representations) of the given text.
+An embedding represents the semantic information of the text as a vector.
+By converting meanings of the text into vectors, you can perform semantic searches instead of literal text searches.
 
 例えば、「牛乳」と「ミルク」は字面は全然違いますが、同じ意味を持つ言葉です。
 従来でも同義語展開を使えば、「牛乳」と「ミルク」のような字面の異なる意味が同じ言葉を検索できますが、同義語展開用のテーブルをメンテナンスしなければなりません。
