Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -43,8 +43,9 @@ The function returns normalized embeddings (vector representations) of the given
 An embedding represents the semantic information of the text as a vector.
 By converting meanings of the text into vectors, you can perform semantic searches instead of literal text searches.
 
-例えば、「牛乳」と「ミルク」は字面は全然違いますが、同じ意味を持つ言葉です。
-従来でも同義語展開を使えば、「牛乳」と「ミルク」のような字面の異なる意味が同じ言葉を検索できますが、同義語展開用のテーブルをメンテナンスしなければなりません。
+For example, "牛乳" ("milk" in kanji) and "ミルク" ("milk" in katakana) look completely different but share the same meaning.
+Traditionally, you could search for words with different spellings but the same meaning by using synonym expansion.
+But this required maintaining a synonym table.
 
 意味ベースの検索ができるようになると、同義語展開用のテーブルを準備、メンテナンスせずに意味の近い言葉を検索できるようになります。
 
