Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -47,7 +47,7 @@ For example, "牛乳" ("milk" in kanji) and "ミルク" ("milk" in katakana) loo
 Traditionally, you could search for words with different spellings but the same meaning by using synonym expansion.
 But this required maintaining a synonym table.
 
-意味ベースの検索ができるようになると、同義語展開用のテーブルを準備、メンテナンスせずに意味の近い言葉を検索できるようになります。
+With semantic search enabled, you can find words with similar meanings without preparing or maintaining a synonym table.
 
 ###### [column_create] 新しい引数 `--generator` を追加しました。
 
