Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -49,7 +49,7 @@ But this required maintaining a synonym table.
 
 With semantic search enabled, you can find words with similar meanings without preparing or maintaining a synonym table.
 
-###### [column_create] 新しい引数 `--generator` を追加しました。
+###### [column_create] Added a new `--generator` argument.
 
 カラムを自動生成できます。
 他のカラムの値からカラムの値を自動で生成できます。
