--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -51,9 +51,8 @@ With semantic search enabled, you can find words with similar meanings without p
 
 ###### [column_create] Added a new `--generator` argument.
 
-カラムを自動生成できます。
-他のカラムの値からカラムの値を自動で生成できます。
-この機能のメリットは以下の2点です。
+You can now automatically generate columns based on the values of other columns.
+The benefits of this feature include:
 
 1. わざわざユーザーがテキスト生成処理を管理する必要がありません。
 2. 生成元のカラムさえあれば良いので、`load`するデータ量を減らすことができます。
