Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -54,8 +54,8 @@ With semantic search enabled, you can find words with similar meanings without p
 You can now automatically generate columns based on the values of other columns.
 The benefits of this feature include:
 
-1. わざわざユーザーがテキスト生成処理を管理する必要がありません。
-2. 生成元のカラムさえあれば良いので、`load`するデータ量を減らすことができます。
+1. Users no longer need to manage text generation processes manually.
+2. You can reduce the amount of data to load since only the source columns are necessary.
 
 例えば、他のカラムの値を`language_model_vectorize()`でエンべディングして、その値を自動生成したカラムに格納するということもできます。
 これを利用すれば、ユーザーは検索対象のテキストを`load`するだけで、エンべディングされたデータも同時に格納できるようになります。
