Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -57,8 +57,8 @@ The benefits of this feature include:
 1. Users no longer need to manage text generation processes manually.
 2. You can reduce the amount of data to load since only the source columns are necessary.
 
-例えば、他のカラムの値を`language_model_vectorize()`でエンべディングして、その値を自動生成したカラムに格納するということもできます。
-これを利用すれば、ユーザーは検索対象のテキストを`load`するだけで、エンべディングされたデータも同時に格納できるようになります。
+For example, you can use `language_model_vectorize()` to embed the values of other columns and store them in automatically generated columns.
+This allows users to `load` only the text to be searched while simultaneously storing the embedded data.
 
 ### Fixes
 
