--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -34,7 +34,7 @@ status
 
 The `llama.cpp` feature is used in the newly introduced `language_model_vectorize()` function described next.
 
-###### 新しい関数 `language_model_vectorize()` を追加しました。(実験的)
+###### Added new function `language_model_vectorize()` (Experimental)
 
 This feature is still experimental and unstable.
 It also consumes a significant amount of CPU and memory.
