Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -62,7 +62,7 @@ This allows users to `load` only the text to be searched while simultaneously st
 
 ### Fixes
 
-###### [{doc}`/server/gqtp`] GQPTクライアントに返却する`INVALID_ARGUMENT`の`RC`の値が`-22`ではなく、`65514`になっていた問題を修正しました。
+###### [{doc}`/server/gqtp`] Fixed an issue where the `RC` value of `INVALID_ARGUMENT` returned to the GQTP client was `65514` instead of `-22`.
 
 GQTPクライアントを利用していないユーザーには影響ありません。
 
