--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -64,7 +64,7 @@ This allows users to `load` only the text to be searched while simultaneously st
 
 ###### [{doc}`/server/gqtp`] Fixed an issue where the `RC` value of `INVALID_ARGUMENT` returned to the GQTP client was `65514` instead of `-22`.
 
-GQTPクライアントを利用していないユーザーには影響ありません。
+This fix does not affect users who are not using GQTP clients.
 
 ###### [{doc}`/reference/commands/logical_range_filter`] command version 3 の時の応答に、余分な`"records":[]`が出力される問題を修正しました。
 
