Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -66,7 +66,7 @@ This allows users to `load` only the text to be searched while simultaneously st
 
 This fix does not affect users who are not using GQTP clients.
 
-###### [{doc}`/reference/commands/logical_range_filter`] command version 3 の時の応答に、余分な`"records":[]`が出力される問題を修正しました。
+###### [{doc}`/reference/commands/logical_range_filter`] Fixed an issue where an extra `"records": []` was output in the response when using command version 3.
 
 この問題は、command version 3の時のみ発生します。デフォルトのcommand versionは1です。
 お使いのGroongaのcommand versionは`status`コマンドで確認できます。
