Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -68,8 +68,8 @@ This fix does not affect users who are not using GQTP clients.
 
 ###### [{doc}`/reference/commands/logical_range_filter`] Fixed an issue where an extra `"records": []` was output in the response when using command version 3.
 
-この問題は、command version 3の時のみ発生します。デフォルトのcommand versionは1です。
-お使いのGroongaのcommand versionは`status`コマンドで確認できます。
+This issue happens only with command version 3. The default command version is 1.
+You can check your Groonga's command version using the `status` command.
 
 ```
 status
