Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -95,7 +95,8 @@ status
 ]
 ```
 
-以下のように、余分な`"records":[]`が出力されますが、command version 3を使ってない場合は発生しません。
+As a follow, an extra `"records": []` was output.
+This does not happen if you are not using command version 3.
 
 ```
 {
