--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -171,7 +171,7 @@ This does not happen if you are not using command version 3.
 }
 ```
 
-###### [{doc}`/reference/commands/logical_range_filter`] {doc}`/reference/commands/request_cancel` でキャンセルした時の応答が、不正なJSONになる問題を修正しました。
+###### [{doc}`/reference/commands/logical_range_filter`] Fixed an issue where the response became invalid JSON when a request was canceled using {doc}`/reference/commands/request_cancel`.
 
 キャンセルのタイミングによって応答の出力が不正なJSONになる不具合を修正しました。
 
