Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -173,7 +173,7 @@ This does not happen if you are not using command version 3.
 
 ###### [{doc}`/reference/commands/logical_range_filter`] Fixed an issue where the response became invalid JSON when a request was canceled using {doc}`/reference/commands/request_cancel`.
 
-キャンセルのタイミングによって応答の出力が不正なJSONになる不具合を修正しました。
+A bug was fixed where the response output could become invalid JSON depending on the timing of the cancellation.
 
 ###### [{doc}`/reference/commands/index_column_diff`] 1つのレコードに同じトークンが大量に存在する時にインデックスの破損を誤検知する問題を修正しました。
 
