Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -175,7 +175,7 @@ This does not happen if you are not using command version 3.
 
 A bug was fixed where the response output could become invalid JSON depending on the timing of the cancellation.
 
-###### [{doc}`/reference/commands/index_column_diff`] 1つのレコードに同じトークンが大量に存在する時にインデックスの破損を誤検知する問題を修正しました。
+###### [{doc}`/reference/commands/index_column_diff`] Fixed an issue where index corruption was falsely detected when a single record contained a large number of identical tokens.
 
 この問題の発生条件は、一つのレコードに同一のトークンが13万個以上含まれていることですが、トークン数を簡単に確認する手段が無いので、
 `index_column_diff`を使って定期的にインデックスの破損を検出している場合は、念の為バージョンアップしておくことをおすすめします。
