Translate to English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -177,8 +177,9 @@ A bug was fixed where the response output could become invalid JSON depending on
 
 ###### [{doc}`/reference/commands/index_column_diff`] Fixed an issue where index corruption was falsely detected when a single record contained a large number of identical tokens.
 
-この問題の発生条件は、一つのレコードに同一のトークンが13万個以上含まれていることですが、トークン数を簡単に確認する手段が無いので、
-`index_column_diff`を使って定期的にインデックスの破損を検出している場合は、念の為バージョンアップしておくことをおすすめします。
+This issue occurs when a single record contains more than 131,071 instances of the same token.
+There's no easy way to check the number of tokens.
+If you regularly use `index_column_diff` to detect index corruption, we recommend updating as a precaution.
 
 <!-- prettier-ignore-start -->
 (release-14-0-9)=
