Translate to English

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -21,13 +21,13 @@ status
     0.0
   ],
   {
-    (省略)
+    (omission)
     "features": {
-      (省略)
+      (omission)
       "llama.cpp": true,
-      (省略)
+      (omission)
     },
-    (省略)
+    (omission)
   }
 ]
 ```
@@ -80,17 +80,17 @@ status
     0.0
   ],
   {
-    (省略)
+    (omission)
     "command_version": 1,
     "default_command_version": 1,
-    (省略)
+    (omission)
     "features": {
-      (省略)
+      (omission)
     },
     "apache_arrow": {
-      (省略)
+      (omission)
     },
-    (省略)
+    (omission)
   }
 ]
 ```
