--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -49,7 +49,7 @@ But this required maintaining a synonym table.
 
 With semantic search enabled, you can find words with similar meanings without preparing or maintaining a synonym table.
 
-###### [column_create] Added a new `--generator` argument.
+###### [{doc}`/reference/commands/column_create`] Added a new `--generator` argument.
 
 You can now automatically generate columns based on the values of other columns.
 The benefits of this feature include:
