Add a missint label

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -34,7 +34,7 @@ status
 
 The `llama.cpp` feature is used in the newly introduced `language_model_vectorize()` function described next.
 
-###### Added new function `language_model_vectorize()` (Experimental)
+###### [`language_model_vectorize()`] Added new function `language_model_vectorize()` (Experimental)
 
 This feature is still experimental and unstable.
 It also consumes a significant amount of CPU and memory.
